# cmake-template

./: CMakeLists.txt  README.md
cmake-template-project/: CMakeLists.txt
