# Project-specific CMakeLists.txt
add_executable(cmake-template-project main.cpp)

message(STATUS "#################################################")
message(STATUS "#################################################")
message(STATUS "EXECUTABLE: cmake-template-project")
message(STATUS "#################################################")
message(STATUS "#################################################") 